--- a/static/css/index_cars.css
+++ b/static/css/index_cars.css
@@ -52,4 +52,9 @@ a {
     border: 1px solid #787878;
     color: #000000;
 }
-    
+
+.del-edit {
+    display: flex;
+    gap: 10px;
+    margin-top: 5%;
+}
