--- a/templates/cars/index.html
+++ b/templates/cars/index.html
@@ -2,7 +2,7 @@
 
 {% block  main %}
     <div class="cars-list">
-        <h2>Список машин</h2>
+        <h2>Список автомобилей</h2>
         <hr>
          {% for car in cars%}
         <a href="{% url 'car-detail' car.pk %}">
