--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -10,19 +10,14 @@
     <div class="auth">
         {% if user.is_authenticated %}
             <a class='profile' href="{% url "profile" %}">{{user}}</a>
+            <a class="car-add" href="{% url "car-add" %}">Добавить автомобиль</a>
             <form action="{% url 'logout' %}" method="post">
                 {% csrf_token %}
                 <button class="logout" type="submit">Выход</button>
             </form>
         {% else %}
-            <form action="{% url 'login' %}" method="post">
-                {% csrf_token %}
-                <button class="login" type="submit">Вход</button>
-            </form>
-            <form action="{% url 'register' %}" method="post">
-                {% csrf_token %}
-                <button class="register" type="submit">Регистрация</button>
-            </form>
+            <a class="login" href="{% url "login" %}">Вход</a>
+            <a class="register" href="{% url "register" %}">Регистрация</a>
         {% endif %}
     </div>
 </header>
